<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grid Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="et_query_hint">Enter search query</string>
    <string name="button_search_name">Search</string>
    <string name="image_result">Image Result</string>
    <string name="image_title_label">Image Title</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="search_options">Advanced Search Options</string>
    <string name="image_size">Image Size</string>
	<string-array name="image_sizes">
	    <item>small</item>
	    <item>medium</item>
	    <item>large</item>
	    <item>icon</item>
	</string-array>
	<string name="color_filter">Color Filter</string>
	<string-array name="color_filter">
	    <item>black</item>
	    <item>blue</item>
	    <item>brown</item>
	    <item>gray</item>
	    <item>green</item>
	</string-array>
	<string name="image_type">Image Type</string>
	<string-array name="image_types">
	    <item>face</item>
	    <item>photo</item>
	    <item>clipart</item>
	    <item>lineart</item>
	</string-array>
	<string name="site_filter">Site Filter</string>
	<string name="enter_url">www.example.com</string>
	<string name="save">Save</string>
</resources>
