<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/search_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/search_options"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/image_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/search_options"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/image_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/size_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_options"
        android:layout_toRightOf="@+id/image_size"
        android:layout_marginLeft="16dp" 
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/color_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/color_options"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/color_filter"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Spinner
        android:id="@+id/color_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/size_options"
        android:layout_toRightOf="@+id/color_filter"
        android:layout_marginLeft="16dp" 
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"/>
    
    <TextView
        android:id="@+id/image_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/color_filter"
        android:layout_alignTop="@+id/type_options"
        android:layout_marginTop="14dp"
        android:text="@string/image_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Spinner
        android:id="@+id/type_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/color_options"
        android:layout_toRightOf="@+id/image_type"
        android:layout_marginLeft="16dp" 
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/site_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_type"
        android:layout_below="@+id/type_options"
        android:layout_marginTop="18dp"
        android:text="@string/site_filter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/site_filter"
        android:layout_alignBottom="@+id/site_filter"
        android:layout_alignLeft="@+id/type_options"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:hint="@string/enter_url"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/save"
        android:onClick="onSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/save" />

</RelativeLayout>
